HW 28 Updated
Testing all features learnt